--- a/src/index.css
+++ b/src/index.css
@@ -37,6 +37,7 @@ body {
   padding: .5rem .5rem .5rem 1rem;
   border-top-right-radius: .5rem;
   border-top-left-radius: .5rem;
+  color: wheat;
 }
 
 .CodeMirror {
